--- a/index.html
+++ b/index.html
@@ -3,28 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Website</title>
+  <title>SUMMER BBQ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Hello, World!</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
   <main>
     <section>
-      <h2>Welcome to My Website</h2>
+      <h1>Welcome to My Website</h1>
       <p>This is a simple HTML and CSS website hosted on GitHub Pages with a custom GoDaddy domain.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Andrew Zhi Yu Shen</p>
   </footer>
 </body>
 </html>
