--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <main>
     <section>
-      <h1>Welcome to My Website</h1>
-      <p>This is a simple HTML and CSS website hosted on GitHub Pages with a custom GoDaddy domain.</p>
+      <h1>SUMMER BBQ</h1>
+      <p>Natural Wine & Good Food</p>
     </section>
   </main>
 
