--- a/index.html
+++ b/index.html
@@ -20,5 +20,25 @@
 </body>
 </html>
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Summer BBQ - Coming Soon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="main-title">SUMMER BBQ</div>
+    <div class="subtitle">natural wine & good food</div>
+    <div class="coming-soon">
+        coming soon
+        <div class="dots">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+    </div>
+</body>
+</html>
 
