--- a/index.html
+++ b/index.html
@@ -3,33 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SUMMER BBQ</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>SUMMER BBQ - COMING SOON</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main>
-    <section>
-      <h1>SUMMER BBQ</h1>
-      <p>Natural Wine & Good Food</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Andrew Zhi Yu Shen</p>
-  </footer>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summer BBQ - Coming Soon</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="main-title">SUMMER BBQ</div>
+     <div class="main-title">SUMMER BBQ</div>
     <div class="subtitle">natural wine & good food</div>
     <div class="coming-soon">
         coming soon
@@ -39,6 +17,12 @@
             <div class="dot"></div>
         </div>
     </div>
+
+  <footer>
+    <p>© 2025 Andrew Zhi Yu Shen</p>
+  </footer>
 </body>
 </html>
+
+
 
