--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             font-size: 1.5rem;
             font-weight: 400;
             margin-bottom: 3rem;
+            margin-top: 1rem;
             color: #333;
         }
 
