--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summer BBQ - Coming Soon</title>
+    <title>ANDREW'S BBQ - Coming Soon</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@@ -134,7 +134,7 @@
     </style>
 </head>
 <body>
-    <div class="main-title">SUMMER BBQ</div>
+    <div class="main-title">ANDREW'S BBQ</div>
     <div class="subtitle">natural wine & good food</div>
     <div class="coming-soon">
         coming soon
