--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </style>
 </head>
 <body>
-    <div class="main-title">ANDREW'S BBQ</div>
+    <div class="main-title">ANDREW'S SUMMER BBQ</div>
     <div class="subtitle">natural wine & good food</div>
     <div class="coming-soon">
         coming soon
