--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <body>
     <div class="container">
         <div class="poster-container">
-            <img src="cookout25_poster.png" alt="Andrew's Summer BBQ Poster" class="poster-image">
+            <img src="poster_bbq_25.png" alt="Andrew's Summer BBQ Poster" class="poster-image">
         </div>
         
         <div class="content-section">
