--- a/index.html
+++ b/index.html
@@ -4,190 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANDREW'S BBQ - Get Tickets</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Space Grotesk', sans-serif;
-            background-color: #ebe3db;
-            color: #2C2C2C;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 40px 20px;
-        }
-
-        .container {
-            max-width: 1200px;
-            width: 100%;
-            display: flex;
-            gap: 4rem;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .poster-container {
-            flex: 0 0 auto;
-            width: 400px;
-        }
-
-        .poster-image {
-            width: 100%;
-            height: auto;
-            aspect-ratio: 210/297;
-            border-radius: 12px;
-            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
-            object-fit: cover;
-        }
-
-        .content-section {
-            flex: 0 0 auto;
-            width: 400px;
-        }
-
-        .event-title {
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 3.5rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            letter-spacing: 0.05em;
-            line-height: 0.9;
-            color: #2C2C2C;
-        }
-
-        .event-subtitle {
-            font-size: 1.2rem;
-            font-weight: 400;
-            margin-bottom: 2rem;
-            color: #555;
-            line-height: 1.4;
-        }
-
-        .event-details {
-            font-size: 1rem;
-            margin-bottom: 2.5rem;
-            line-height: 1.6;
-            color: #666;
-        }
-
-        .buttons-container {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .btn {
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 1.3rem;
-            font-weight: 700;
-            padding: 18px 40px;
-            border: none;
-            border-radius: 50px;
-            letter-spacing: 0.05em;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-            text-align: center;
-        }
-
-        .btn-primary {
-            background-color: #2D3A2B;
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background-color: #1A2419;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 16px rgba(45, 58, 43, 0.4);
-        }
-
-        .btn-secondary {
-            background-color: transparent;
-            color: #2D3A2B;
-            border: 2px solid #2D3A2B;
-        }
-
-        .btn-secondary:hover {
-            background-color: #2D3A2B;
-            color: white;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 16px rgba(45, 58, 43, 0.4);
-        }
-
-        .btn:active {
-            transform: translateY(0);
-        }
-
-        /* Mobile styles */
-        @media (max-width: 968px) {
-            .container {
-                flex-direction: column;
-                gap: 3rem;
-                text-align: center;
-            }
-
-            .poster-container {
-                max-width: 400px;
-            }
-
-            .content-section {
-                max-width: 100%;
-            }
-
-            .event-title {
-                font-size: 3rem;
-            }
-
-            .buttons-container {
-                align-items: center;
-            }
-
-            .btn {
-                max-width: 280px;
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            body {
-                padding: 60px 15px;
-            }
-
-            .container {
-                gap: 2rem;
-            }
-
-            .poster-container {
-                max-width: 100%;
-            }
-
-            .event-title {
-                font-size: 2.5rem;
-            }
-
-            .event-subtitle {
-                font-size: 1.1rem;
-            }
-
-            .event-details {
-                font-size: 0.95rem;
-            }
-
-            .btn {
-                font-size: 1.2rem;
-                padding: 15px 30px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -198,6 +15,7 @@
         <div class="content-section">
             <p class="event-details">
                 Uitzonderlijke wijnen uit bijzondere magnums en verfrissende limonades. Daarnaast op de bbq o.a. Côte de Boeuf, Zalm, Veggies en ook nog verfrissende salades. Als afsluiter Burnt Basque Cheesecake! 
+                Sluit je aan op deze mooie zomerse dag.
 
             </p>
             
